# advent-of-code-2025

./: README.md  pyproject.toml
aoc2025/: __init__.py  __main__.py  cafeteria.py  christmas_tree_farm.py  cli.py  factory.py  gift_shop.py  laboratories.py  lobby.py  movie_theater.py  playground.py  printing_department.py  reactor.py  secret_entrance.py  trash_compactor.py
aoc2025/utils/: dancing_links.py  disjoint_set.py  polyomino.py
