[project]
name = "aoc2025"
version = "0.0.1"
description = "Evan Sultanik's Advent of Code 2025 Solutions."
authors = [
    {name = "Evan Sultanik", email="evan@sultanik.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"

keywords = ["puzzles"]

dependencies = [
    "intervaltree~=3.1.0",
    "python-sat~=1.8.dev24",
    "rich~=14.2.0",
    "z3-solver~=4.15.4.0"
]

[project.urls]
homepage = "https://github.com/ESultanik/advent-of-code-2025"
documentation = "https://github.com/ESultanik/advent-of-code-2025"
repository = "https://github.com/ESultanik/advent-of-code-2025"

[project.scripts]
aoc2025 = "aoc2025.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
